infra/restrictions.tf
resource "aws_security_group" "alb_sg" {
  name        = "${terraform.workspace}-alb-security-group"
  description = "Allow HTTP and HTTPS traffic to ALB"
  vpc_id      = aws_vpc.core.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "ec2_sg" {
  name        = "${terraform.workspace}-ec2-security-group"
  description = "Allow traffic to and from EC2 instances"
  vpc_id      = aws_vpc.core.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
